...
import SwiftUI

struct CredentialPropertyFormContentView: View {
  @ObservedObject var object: CredentialPropertyObject
  var body: some View {
    Section("Account") {
      TextField("account", text: $object.item.account)
    }

    Section("Data") {
      #if os(watchOS)
        TextField("data", text: $object.item.dataString)
      #else
        TextEditor(text: $object.item.dataString).frame(height: 80.0).accessibilityIdentifier("data")
      #endif
    }

    Section("Is Syncronizable") {
      Toggle("Is Set", isOn: $object.item.isSynchronizableSet)
      Toggle("Is Syncronizable", isOn: $object.item.isSynchronizableValue)
    }

    Section("Access Group") {
      #if os(watchOS)
...
      #else
        TextEditor(text: $object.item.accessGroupText).frame(height: 60.0)
      #endif
    }

    Section("Type") {
      Toggle("Set Type", isOn: $object.item.hasType)
      Stepper(value: $object.item.typeValue) {
        Text("\(object.item.typeValue)")
      }.accessibilityIdentifier("setTypeStepper")
    }

    Section("Label") {
      Toggle("Set Label", isOn: $object.item.hasLabel)
      TextField("label", text: $object.item.labelValue)
    }

    switch self.object.item.secClass {
    case .internet:
      Section("URL") {
        Text(object.item.url?.description ?? "")
...
