...
  @State var createNewItem = false
  @State var isErrorAlertVisible = false

  var navigationTitle: String {
    switch query.type {
    case .generic:
      return "Generic Passwords"
    case .internet:
      return "Internet Passwords"
    }
  }

  var newNavigationTitle: String {
    switch query.type {
    case .generic:
      return "New Generic Passwords"
    case .internet:
      return "New Internet Passwords"
    }
  }

  var body: some View {
    NavigationStack {
      Form {
...
            }
          }
        }
        Section {
          Group {
            if self.object.isLoaded {
              CredentialPropertyList(object: object).accessibilityIdentifier("propertyList")
            } else {
              ProgressView()
            }
          }
        } header: {
          HStack {
            Text("account")
            Spacer()
            Text("data")
          }
        }
      }
      .onReceive(self.object.$lastError, perform: { error in
        self.isErrorAlertVisible = error != nil
      })
...
