...
      List(object.credentialProperties) { item in
        NavigationLink(value: item) {
          HStack {
            #if !os(watchOS)
              Image(systemName: item.propertyType.sfSymbolName)
            #endif
            Text(item.account).accessibilityIdentifier("accountProperty")
            Spacer()
            Text(item.dataString).bold().accessibilityIdentifier("dataProperty")
          }.lineLimit(1)
        }
      }
    #else
      Table(object.properties) {
        TableColumn("") { _ in
...
